<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/preferences_category_developer">

        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_alignment"
            android:summary="Align tessellation manually"
            android:title="@string/debug" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_accessibility">
        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_preference_1"
            android:switchTextOff="Small"
            android:switchTextOn="Large"
            android:title="@string/preference_font_size" />
    </PreferenceCategory>

</PreferenceScreen>