<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password_here"
        android:autofillHints=""
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm" />
</LinearLayout>